# django_tutorial

./: .pre-commit-config.yaml  README.md  manage.py  mypy.ini  pyproject.toml  tox.ini
polls/: admin.py  asgi.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
